# pi-pico-projects

./: .gitignore
C/hello-serial/: CMakeLists.txt  hello-serial.c
C/wifi-test/: CMakeLists.txt  wifi-test.c
MicroPython/inky-cats/: WIFI_CONFIG.py  main.py  network_manager.py
MicroPython/inky-cube/: 3d-cube.py
MicroPython/inky-departures/: app.py  main.py
MicroPython/lib/: battery.py  web_time.py  wlan.py
